[gd_scene load_steps=10 format=3 uid="uid://dmpx14vubrav6"]

[ext_resource type="Texture2D" uid="uid://hygqovgpkm" path="res://assets/colored-transparent.png" id="1_1s45q"]
[ext_resource type="Script" path="res://player/player.gd" id="1_2y84b"]
[ext_resource type="PackedScene" uid="uid://n3hnjyyu4hbx" path="res://systems/xp/level_up.tscn" id="3_beelo"]
[ext_resource type="PackedScene" uid="uid://cdocugfvu2aoq" path="res://player/weapons/sword.tscn" id="4_wevn1"]
[ext_resource type="PackedScene" uid="uid://bdyipn10auw15" path="res://particles/dust.tscn" id="5_dn8my"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vnhnj"]
atlas = ExtResource("1_1s45q")
region = Rect2(427, 1, 12, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8foj2"]
size = Vector2(12, 14)

[sub_resource type="Animation" id="Animation_h8nij"]
resource_name = "run"
length = 0.5
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -0.139626]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7k5f2"]
_data = {
"run": SubResource("Animation_h8nij")
}

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_2y84b")

[node name="sprite" type="Sprite2D" parent="."]
rotation = -0.0473006
texture = SubResource("AtlasTexture_vnhnj")

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_8foj2")

[node name="camera" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="level_up" parent="." instance=ExtResource("3_beelo")]

[node name="Label" type="Label" parent="level_up"]
visible = false
offset_left = -34.0
offset_top = -34.0
offset_right = 35.0
offset_bottom = -11.0
text = "Level up!"

[node name="level_up_timer" type="Timer" parent="level_up/Label"]
wait_time = 2.0
one_shot = true

[node name="weapon_pivot" type="Node2D" parent="."]

[node name="sword" parent="weapon_pivot" instance=ExtResource("4_wevn1")]

[node name="dust" parent="." instance=ExtResource("5_dn8my")]
position = Vector2(3, 7)

[node name="player_anims" type="AnimationPlayer" parent="."]
root_node = NodePath("../dust")
libraries = {
"": SubResource("AnimationLibrary_7k5f2")
}
autoplay = "run"

[connection signal="timeout" from="level_up/Label/level_up_timer" to="." method="_on_level_up_timer_timeout"]
